--- a/packages/helpful-fn/package.json
+++ b/packages/helpful-fn/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zthun/helpful-dash",
+  "name": "@zthun/helpful-fn",
   "version": "0.0.0",
   "description": "Helpful functions that are not found in other libraries such as lodash.",
   "author": "Anthony Bonta",
@@ -7,7 +7,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/zthun/helpful",
-    "directory": "packages/helpful-dash"
+    "directory": "packages/helpful-fn"
   },
   "main": "./dist/lib/index.js",
   "module": "./dist/lib/index.esm.js",
