--- a/packages/helpful-query/package.json
+++ b/packages/helpful-query/package.json
@@ -26,5 +26,8 @@
   "files": [
     "dist"
   ],
-  "sideEffects": false
+  "sideEffects": false,
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
