--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.1",
+    "@types/uuid": "^9.0.1",
     "@vitest/coverage-istanbul": "^0.28.5",
     "@zthun/lint-janitor": "^14.1.0",
     "@zthun/lint-janitor-config": "^14.1.0",
