--- a/packages/helpful-fn/package.json
+++ b/packages/helpful-fn/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "microbundle": "^0.15.1",
+    "uuid": "^9.0.0",
     "vite": "^4.1.4",
     "vitest": "^0.28.5"
   },
