--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@commitlint/config-conventional": "^17.6.1",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.16.0",
+    "@types/react": "^18.0.38",
     "@types/uuid": "^9.0.1",
     "@vitest/coverage-istanbul": "^0.30.1",
     "@zthun/lint-janitor": "^14.1.0",
     "@zthun/lint-janitor-config": "^14.1.0",
     "husky": "^8.0.3",
+    "jsdom": "^21.1.1",
     "lerna": "^6.6.1",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
