--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "baseUrl": "packages",
-    "target": "esnext"
+    "target": "esnext",
+    "paths": {
+      "@zthun/helpful-fn": ["helpful-fn/src/index"]
+    }
   },
   "include": ["**/*.ts"],
   "exclude": ["**/node_modules/**"]
