--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vite": "^4.3.1",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.30.1"
   },
   "packageManager": "yarn@3.3.1"
