--- a/packages/helpful-query/package.json
+++ b/packages/helpful-query/package.json
@@ -18,6 +18,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@zthun/helpful-fn": "^0.8.2",
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
     "microbundle": "^0.15.1",
     "vite": "^4.3.5",
@@ -26,8 +30,5 @@
   "files": [
     "dist"
   ],
-  "sideEffects": false,
-  "dependencies": {
-    "lodash": "^4.17.21"
-  }
+  "sideEffects": false
 }
