--- a/packages/helpful-query/tsconfig.json
+++ b/packages/helpful-query/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "declarationDir": "dist/types"
+    "declarationDir": "dist/types",
+    "paths": {
+      "@zthun/helpful-fn": ["../helpful-fn/src/index"]
+    }
   },
   "include": ["src/**/*.ts"]
 }
