build: allow for jsx in tests

--- a/packages/helpful-react/tsconfig.json
+++ b/packages/helpful-react/tsconfig.json
@@ -7,5 +7,5 @@
       "@zthun/helpful-fn": ["../helpful-fn/src/index"]
     }
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
