refactor: helpful-react now depends on helpful-query

--- a/packages/helpful-react/tsconfig.json
+++ b/packages/helpful-react/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": ".",
     "declarationDir": "dist/types",
     "paths": {
-      "@zthun/helpful-fn": ["../helpful-fn/src/index"]
+      "@zthun/helpful-fn": ["../helpful-fn/src/index"],
+      "@zthun/helpful-query": ["../helpful-query/src/index"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
