--- a/packages/helpful-react/package.json
+++ b/packages/helpful-react/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@zthun/helpful-fn": "^0.18.0",
+    "@zthun/helpful-query": "^0.18.0",
     "lodash": "^4.17.21",
     "rxjs": "^7.8.1"
   },
