--- a/packages/helpful-react/package.json
+++ b/packages/helpful-react/package.json
@@ -30,8 +30,10 @@
     "microbundle": "^0.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "typescript": "^5.1.6",
     "vite": "^4.4.4",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "vitest-mock-extended": "^1.1.4"
   },
   "peerDependencies": {
     "react": "^18.1.0",
