feat: helpful internet has object builders for internet related entities

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@zthun/helpful-brands": ["helpful-brands/src/index"],
       "@zthun/helpful-fn": ["helpful-fn/src/index"],
+      "@zthun/helpful-internet": ["helpful-internet/src/index"],
       "@zthun/helpful-obligation": ["helpful-obligation/src/index"],
       "@zthun/helpful-query": ["helpful-query/src/index"],
       "@zthun/helpful-react": ["helpful-react/src/index"]
