--- a/packages/helpful-fn/package.json
+++ b/packages/helpful-fn/package.json
@@ -18,9 +18,11 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "uuid": "^9.0.0"
+  },
   "devDependencies": {
     "microbundle": "^0.15.1",
-    "uuid": "^9.0.0",
     "vite": "^4.4.7",
     "vitest": "^0.33.0"
   },
