--- a/packages/helpful-internet/package.json
+++ b/packages/helpful-internet/package.json
@@ -18,8 +18,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@zthun/helpful-fn": "^0.21.5"
+  },
   "devDependencies": {
-    "@zthun/helpful-fn": "^0.21.5",
     "microbundle": "^0.15.1",
     "vite": "^4.4.7",
     "vitest": "^0.33.0"
