--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/lodash": "^4.14.201",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
+    "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.7",
     "@vitest/coverage-istanbul": "^0.34.6",
     "@zthun/lint-janitor": "^14.3.2",
