build: publish helpful-api

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,17 @@ jobs:
       - run_docker_target:
           target: release
 
+  dockerize:
+    executor: system
+    steps:
+      - checkout
+      - run:
+          command: |
+            export DOCKER_BUILDKIT=1
+            docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASSWORD
+            docker buildx create --use
+            docker buildx build --target helpful-api -t zthun/helpful-api:latest -t zthun/helpful-api:$(npm show @zthun/helpful-api version) --progress=plain --platform linux/arm64,linux/amd64 --push .
+
 workflows:
   make:
     jobs:
@@ -67,3 +78,8 @@ workflows:
             branches:
               only:
                 - latest
+      - dockerize:
+          context:
+            - credentials
+          requires:
+            - release
