--- a/packages/helpful-proxy/package.json
+++ b/packages/helpful-proxy/package.json
@@ -19,6 +19,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "cosmiconfig": "^8.3.6",
+    "http-reverse-proxy-ts": "^1.0.1"
+  },
   "devDependencies": {
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6",
