--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,7 @@ jobs:
             docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASSWORD
             docker buildx create --use
             docker buildx build --target helpful-api -t zthun/helpful-api:latest -t zthun/helpful-api:$(npm show @zthun/helpful-api version) --progress=plain --platform linux/arm64,linux/amd64 --push .
+            docker buildx build --target helpful-proxy -t zthun/helpful-proxy:latest -t zthun/helpful-proxy:$(npm show @zthun/helpful-proxy version) --progress=plain --platform linux/arm64,linux/amd64 --push .
 
 workflows:
   make:
