--- a/packages/helpful-web/package.json
+++ b/packages/helpful-web/package.json
@@ -26,6 +26,7 @@
     "@zthun/helpful-react": "^3.0.0",
     "@zthun/helpful-validation": "^3.0.0",
     "typedoc": "^0.25.3",
+    "typedoc-plugin-extras": "^3.0.0",
     "typescript": "^5.3.2"
   },
   "files": [
