--- a/.config/.tsconfig.json
+++ b/.config/.tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "moduleResolution": "node",
     "esModuleInterop": true,
