--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,5 @@
       "@zthun/helpful-validation": ["helpful-validation/src/index"]
     }
   },
-  "include": ["**/*.ts"],
-  "exclude": ["**/node_modules/**"]
+  "include": ["**/*.ts"]
 }
