chore: support for mts files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
       "@zthun/helpful-validation": ["helpful-validation/src/index"]
     }
   },
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts", "**/*.mts"]
 }
