--- a/packages/helpful-brands/package.json
+++ b/packages/helpful-brands/package.json
@@ -9,20 +9,23 @@
     "url": "https://github.com/zthun/helpful",
     "directory": "packages/helpful-brands"
   },
-  "main": "./dist/lib/index.js",
-  "module": "./dist/lib/index.esm.js",
-  "types": "./dist/types/index.d.ts",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.js",
+    "types": "./dist/index.d.ts"
+  },
   "scripts": {
-    "build": "microbundle --format esm,cjs --tsconfig tsconfig.prod.json"
+    "build": "vite build"
   },
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
   "devDependencies": {
-    "microbundle": "^0.15.1",
+    "vite": "^5.0.11",
     "vitest": "^1.2.0"
   },
   "files": [
