refactor: convert internal lodash to lodash-es

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
-    "@types/lodash": "^4.14.202",
+    "@types/lodash-es": "^4.14.202",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.47",
     "@types/supertest": "^6.0.2",
