--- a/packages/helpful-query/package.json
+++ b/packages/helpful-query/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@zthun/helpful-fn": "^3.0.0",
-    "lodash": "^4.17.21"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "microbundle": "^0.15.1",
