--- a/packages/helpful-react/package.json
+++ b/packages/helpful-react/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@zthun/helpful-fn": "^3.0.0",
     "@zthun/helpful-query": "^3.0.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
