build: convert to vite build

--- a/packages/helpful-internet/tsconfig.json
+++ b/packages/helpful-internet/tsconfig.json
@@ -2,10 +2,9 @@
   "extends": "../../.config/.tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "declarationDir": "dist/types",
     "paths": {
       "@zthun/helpful-fn": ["../helpful-fn/src/index"]
     }
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/**/*.mts"]
 }
