--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
+    "vite": "^5.0.11",
     "vite-plugin-dts": "^3.7.0",
     "vite-plugin-externalize-deps": "^0.8.0",
     "vite-tsconfig-paths": "^4.2.3",
