--- a/packages/helpful-node/package.json
+++ b/packages/helpful-node/package.json
@@ -9,14 +9,20 @@
     "url": "https://github.com/zthun/helpful",
     "directory": "packages/helpful-node"
   },
-  "main": "./dist/lib/index.js",
-  "module": "./dist/lib/index.esm.js",
-  "types": "./dist/types/index.d.ts",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.js",
+    "types": "./dist/index.d.ts"
+  },
   "engines": {
     "node": ">=20.9.0"
   },
   "scripts": {
-    "build": "microbundle --format esm,cjs --tsconfig tsconfig.prod.json"
+    "build": "vite build"
   },
   "publishConfig": {
     "access": "public"
@@ -25,7 +31,7 @@
     "@zthun/helpful-fn": "^3.0.0"
   },
   "devDependencies": {
-    "microbundle": "^0.15.1",
+    "vite": "^5.0.11",
     "vitest": "^1.2.0"
   },
   "files": [
