--- a/packages/helpful-react/package.json
+++ b/packages/helpful-react/package.json
@@ -9,11 +9,17 @@
     "url": "https://github.com/zthun/helpful",
     "directory": "packages/helpful-react"
   },
-  "main": "./dist/lib/index.js",
-  "module": "./dist/lib/index.esm.js",
-  "types": "./dist/types/index.d.ts",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "require": "./dist/index.cjs",
+    "import": "./dist/index.js",
+    "types": "./dist/index.d.ts"
+  },
   "scripts": {
-    "build": "microbundle --format esm,cjs --tsconfig tsconfig.prod.json"
+    "build": "vite build"
   },
   "publishConfig": {
     "access": "public"
@@ -27,10 +33,10 @@
   "devDependencies": {
     "@zthun/cirque": "^5.0.1",
     "@zthun/cirque-du-react": "^5.0.3",
-    "microbundle": "^0.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
+    "vite": "^5.0.11",
     "vitest": "^1.2.0",
     "vitest-mock-extended": "^1.3.1"
   },
