--- a/packages/helpful-react/tsconfig.json
+++ b/packages/helpful-react/tsconfig.json
@@ -2,11 +2,10 @@
   "extends": "../../.config/.tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "declarationDir": "dist/types",
     "paths": {
       "@zthun/helpful-fn": ["../helpful-fn/src/index"],
       "@zthun/helpful-query": ["../helpful-query/src/index"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.mts"]
 }
