refactor: remove all microbundle

--- a/.dockerignore
+++ b/.dockerignore
@@ -70,7 +70,7 @@ typings/
 # Optional eslint cache
 .eslintcache
 
-# Microbundle cache
+# RPT2 cache
 .rpt2_cache/
 .rts2_cache_cjs/
 .rts2_cache_es/
