build: vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "editor.formatOnSave": true,
   "editor.tabSize": 2,
   "cucumber.features": ["packages/**/features/**/*.feature"],
-  "cucumber.glue": ["packages/**/features/**/*.ts"]
+  "cucumber.glue": ["packages/**/features/**/*.ts"],
+  "testing.automaticallyOpenPeekView": "never"
 }
