--- a/packages/helpful-fn/package.json
+++ b/packages/helpful-fn/package.json
@@ -29,7 +29,8 @@
   },
   "devDependencies": {
     "vite": "^5.0.11",
-    "vitest": "^1.2.0"
+    "vitest": "^1.2.0",
+    "vitest-mock-extended": "^1.3.1"
   },
   "files": [
     "dist"
