--- a/packages/helpful-fn/package.json
+++ b/packages/helpful-fn/package.json
@@ -28,6 +28,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vitest": "^1.2.0",
     "vitest-mock-extended": "^1.3.1"
