--- a/packages/helpful-dom/package.json
+++ b/packages/helpful-dom/package.json
@@ -24,6 +24,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@zthun/helpful-fn": "^3.5.0"
+  },
   "devDependencies": {
     "typescript": "^5.3.3",
     "vite": "^5.1.3",
