--- a/packages/helpful-dom/package.json
+++ b/packages/helpful-dom/package.json
@@ -25,7 +25,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@zthun/helpful-fn": "^3.5.0"
+    "@zthun/helpful-fn": "^3.5.0",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
