--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,12 @@ jobs:
       - run_docker_target:
           target: test
 
+  check:
+    executor: system
+    steps:
+      - run_docker_target:
+          target: check
+
   build:
     executor: system
     steps:
@@ -64,6 +70,7 @@ workflows:
     jobs:
       - analyze
       - test
+      - check
       - build:
           filters:
             branches:
@@ -74,6 +81,7 @@ workflows:
             - credentials
           requires:
             - analyze
+            - check
             - test
           filters:
             branches:
