--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "rimraf --glob 'dist' 'reports' 'coverage' '*.tgz' '*.log' 'packages/**/dist' 'packages/**/docs' 'packages/**/*.tgz' 'packages/**/*.log' 'packages/**/.certificates'",
     "test": "vitest --run --coverage",
     "lint": "lint-janitor",
+    "check": "tsc --noEmit",
     "build": "lerna run build",
     "make": "yarn clean && yarn lint && yarn test && yarn build",
     "postinstall": "husky install"
