--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "lint-janitor",
     "check": "tsc --noEmit",
     "build": "lerna run build",
-    "make": "yarn clean && yarn lint && yarn test && yarn build",
+    "make": "yarn clean && yarn lint && yarn check && yarn test && yarn build",
     "postinstall": "husky install"
   },
   "devDependencies": {
