--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "lerna": "^8.1.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
+    "typescript": "~5.3.3",
+    "vite": "^5.1.5",
     "vite-plugin-dts": "^3.7.3",
     "vite-plugin-externalize-deps": "^0.8.0",
     "vite-tsconfig-paths": "^4.3.1",
