--- a/packages/helpful-dom/package.json
+++ b/packages/helpful-dom/package.json
@@ -29,8 +29,8 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
+    "typescript": "~5.3.3",
+    "vite": "^5.1.5",
     "vitest": "^1.3.1",
     "vitest-mock-extended": "^1.3.1"
   },
