--- a/packages/helpful-fn/package.json
+++ b/packages/helpful-fn/package.json
@@ -28,8 +28,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
+    "typescript": "~5.3.3",
+    "vite": "^5.1.5",
     "vitest": "^1.3.1",
     "vitest-mock-extended": "^1.3.1"
   },
