--- a/packages/helpful-proxy/package.json
+++ b/packages/helpful-proxy/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
-    "typescript": "^5.3.3",
+    "typescript": "~5.3.3",
     "vitest": "^1.3.1",
     "vitest-mock-extended": "^1.3.1"
   },
