--- a/packages/helpful-react/package.json
+++ b/packages/helpful-react/package.json
@@ -35,8 +35,8 @@
     "@zthun/cirque-du-react": "^5.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
+    "typescript": "~5.3.3",
+    "vite": "^5.1.5",
     "vitest": "^1.3.1",
     "vitest-mock-extended": "^1.3.1"
   },
