--- a/packages/helpful-web/package.json
+++ b/packages/helpful-web/package.json
@@ -27,7 +27,7 @@
     "@zthun/helpful-validation": "^3.12.2",
     "typedoc": "^0.25.9",
     "typedoc-plugin-extras": "^3.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "~5.3.3"
   },
   "files": [
     "dist"
