--- a/packages/helpful-dom/package.json
+++ b/packages/helpful-dom/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@zthun/helpful-fn": "^4.0.2",
+    "@zthun/trilean": "^1.1.0",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
