build: upgrade vitest

--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "@vitest/coverage-istanbul": "^1.5.0",
     "@zthun/lint-janitor": "^16.1.0",
     "@zthun/lint-janitor-config": "^16.1.0",
+    "glob": "^10.3.12",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "lerna": "^8.1.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.4.4",
+    "typescript": "~5.4.5",
     "vite": "^5.2.10",
     "vite-plugin-dts": "^3.8.3",
     "vite-plugin-externalize-deps": "^0.8.0",
