--- a/packages/helpful-proxy/package.json
+++ b/packages/helpful-proxy/package.json
@@ -4,6 +4,7 @@
   "description": "A helpful reverse proxy used for local development.",
   "author": "Anthony Bonta",
   "license": "MIT",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/zthun/helpful",
@@ -25,9 +26,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
-    "typescript": "~5.5.3",
-    "vitest": "^2.0.2",
-    "vitest-mock-extended": "^1.3.1"
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5",
+    "vitest-mock-extended": "^2.0.2"
   },
   "files": [
     "bin",
