--- a/packages/helpful-react/package.json
+++ b/packages/helpful-react/package.json
@@ -35,10 +35,10 @@
     "@zthun/cirque-du-react": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "~5.5.3",
-    "vite": "^5.3.3",
-    "vitest": "^2.0.2",
-    "vitest-mock-extended": "^1.3.1"
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2",
+    "vitest": "^2.0.5",
+    "vitest-mock-extended": "^2.0.2"
   },
   "peerDependencies": {
     "react": "^18.3.1",
