--- a/packages/helpful-fn/package.json
+++ b/packages/helpful-fn/package.json
@@ -25,6 +25,7 @@
     "access": "public"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
