--- a/package.json
+++ b/package.json
@@ -19,30 +19,30 @@
     "check": "tsc --noEmit",
     "build": "lerna run build",
     "make": "yarn clean && yarn lint && yarn check && yarn test && yarn build",
-    "postinstall": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.3.5",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "@vitest/coverage-istanbul": "^2.0.5",
+    "@vitest/coverage-istanbul": "^2.1.1",
     "@zthun/lint-janitor": "^17.0.3",
     "@zthun/lint-janitor-config": "^17.0.5",
-    "husky": "^9.1.5",
+    "husky": "^9.1.6",
     "jsdom": "^25.0.0",
     "lerna": "^8.1.8",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.3",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.5",
     "vite-plugin-dts": "^4.2.1",
     "vite-plugin-externalize-deps": "^0.8.0",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.1"
   },
   "packageManager": "yarn@4.4.1"
 }
