test: use happy-dom over jsdom

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@vitest/coverage-istanbul": "^2.1.3",
     "@zthun/lint-janitor": "^17.0.6",
     "@zthun/lint-janitor-config": "^17.0.6",
+    "happy-dom": "^15.7.4",
     "husky": "^9.1.6",
-    "jsdom": "^25.0.1",
     "lerna": "^8.1.8",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
