--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.18",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "@vitest/coverage-istanbul": "^2.1.5",
-    "@zthun/lint-janitor": "^18.0.4",
-    "@zthun/lint-janitor-config": "^18.0.4",
-    "happy-dom": "^15.11.6",
+    "@vitest/coverage-istanbul": "^2.1.8",
+    "@zthun/lint-janitor": "^18.0.5",
+    "@zthun/lint-janitor-config": "^18.0.5",
+    "happy-dom": "^15.11.7",
     "husky": "^9.1.7",
     "lerna": "^8.1.9",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
+    "typescript": "~5.6.3",
     "vite": "^5.4.11",
-    "vite-plugin-dts": "^4.3.0",
+    "vite-plugin-dts": "^4.4.0",
     "vite-plugin-externalize-deps": "^0.8.0",
-    "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^2.1.5"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   },
   "packageManager": "yarn@4.6.0"
 }
