--- a/packages/helpful-fn/package.json
+++ b/packages/helpful-fn/package.json
@@ -28,9 +28,9 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
+    "typescript": "~5.6.3",
     "vite": "^5.4.11",
-    "vitest": "^2.1.5",
+    "vitest": "^2.1.8",
     "vitest-mock-extended": "^2.0.2"
   },
   "files": [
