--- a/packages/helpful-react/package.json
+++ b/packages/helpful-react/package.json
@@ -31,13 +31,13 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@zthun/cirque": "^7.0.5",
-    "@zthun/cirque-du-react": "^7.0.5",
+    "@zthun/cirque": "^7.1.0",
+    "@zthun/cirque-du-react": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5.6.3",
+    "typescript": "~5.6.3",
     "vite": "^5.4.11",
-    "vitest": "^2.1.5",
+    "vitest": "^2.1.8",
     "vitest-mock-extended": "^2.0.2"
   },
   "peerDependencies": {
