--- a/packages/helpful-web/package.json
+++ b/packages/helpful-web/package.json
@@ -28,7 +28,7 @@
     "@zthun/helpful-validation": "^6.6.0",
     "typedoc": "^0.26.11",
     "typedoc-plugin-extras": "^3.1.0",
-    "typescript": "^5.6.3"
+    "typescript": "~5.6.3"
   },
   "files": [
     "dist"
