--- a/packages/helpful-react/package.json
+++ b/packages/helpful-react/package.json
@@ -33,16 +33,16 @@
   "devDependencies": {
     "@zthun/cirque": "^7.1.0",
     "@zthun/cirque-du-react": "^7.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "typescript": "~5.6.3",
     "vite": "^5.4.11",
     "vitest": "^2.1.8",
     "vitest-mock-extended": "^2.0.2"
   },
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": ">=18.0.0 <20.0.0",
+    "react-dom": ">=18.0.0 <20.0.0",
     "rxjs": "^7.8.1"
   },
   "peerDependenciesMeta": {
