--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.4",
     "@types/react": "^19.0.2",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@vitest/coverage-istanbul": "^2.1.8",
     "@zthun/lint-janitor": "^18.0.5",
     "@zthun/lint-janitor-config": "^18.0.5",
-    "happy-dom": "^16.0.1",
+    "happy-dom": "^16.3.0",
     "husky": "^9.1.7",
     "lerna": "^8.1.9",
     "rimraf": "^6.0.1",
@@ -43,6 +43,9 @@
     "vite-plugin-externalize-deps": "^0.8.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^2.1.8"
+  },
+  "resolutions": {
+    "rollup": "npm:@rollup/wasm-node@*"
   },
   "packageManager": "yarn@4.6.0"
 }
