--- a/packages/helpful-proxy/package.json
+++ b/packages/helpful-proxy/package.json
@@ -13,7 +13,7 @@
   "main": "./dist/main.js",
   "scripts": {
     "build": "tsc -p tsconfig.prod.json",
-    "debug": "nodemon",
+    "debug": "tsx watch ./src/main.ts",
     "start": "node ./dist/main.js"
   },
   "bin": "./bin/main.js",
@@ -25,7 +25,7 @@
     "http-reverse-proxy-ts": "^1.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
+    "tsx": "^4.19.2",
     "typescript": "~5.6.3",
     "vitest": "^2.1.8",
     "vitest-mock-extended": "^2.0.2"
