build!: helpful-proxy has been removed
Use @zthun/bouncer instead

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,17 +3,5 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Launch Helpful Proxy",
-      "type": "node",
-      "request": "launch",
-      "runtimeExecutable": "node",
-      "runtimeArgs": ["--nolazy", "-r", "ts-node/register/transpile-only"],
-      "args": ["src/main.ts"],
-      "cwd": "${workspaceFolder}/packages/helpful-proxy",
-      "internalConsoleOptions": "openOnSessionStart",
-      "skipFiles": ["<node_internals>/**", "node_modules/**"]
-    }
-  ]
+  "configurations": []
 }
