build: types declarations are first

--- a/packages/helpful-node/package.json
+++ b/packages/helpful-node/package.json
@@ -10,13 +10,13 @@
     "directory": "packages/helpful-node"
   },
   "type": "module",
+  "types": "./dist/index.d.ts",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
+    "types": "./dist/index.d.ts",
     "require": "./dist/index.cjs",
-    "import": "./dist/index.js",
-    "types": "./dist/index.d.ts"
+    "import": "./dist/index.js"
   },
   "engines": {
     "node": ">=20.9.0"
