feat: file system service gives information about files in a easy unit testable way

--- a/packages/helpful-node/package.json
+++ b/packages/helpful-node/package.json
@@ -28,7 +28,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@zthun/helpful-fn": "^7.0.5"
+    "@zthun/helpful-fn": "^7.0.5",
+    "glob": "^11.0.0"
   },
   "devDependencies": {
     "vite": "^5.4.11",
